--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -16,11 +16,12 @@
   "App13": "Notifier Plus",
   "App14": "One at a Time",
   "App15": "Send IP2IR",
-  "App16": "Snapshot",
-  "App17": "Web Pinger",
-  "App18": "Welcome Home",
-  "App19": "What Did I Say",
-  "App20": "",
+  "App16": "Simple Irrigation",
+  "App17": "Snapshot",
+  "App18": "Web Pinger",
+  "App19": "Welcome Home",
+  "App20": "What Did I Say",
+  
   
   "ExampleType": "App",
   "ExampleParentVersion": "Do not remove this section.",
@@ -203,6 +204,16 @@
   "SendIP2IRDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Driver.groovy",
   "SendIP2IRDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
   "SendIP2IRUpdateNote": "V1.1.9 - 04/16/19 - Fixed a bug, thank you @NickP!",
+  
+  "SimpleIrrigationType": "App",
+  "SimpleIrrigationParentVersion": "v1.0.0",
+  "SimpleIrrigationChildVersion": "v1.0.0",
+  "SimpleIrrigationDriverVersion": "NA",
+  "SimpleIrrigationParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-parent.groovy",
+  "SimpleIrrigationChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy",
+  "SimpleIrrigationDriverRawCode": "NA",
+  "SimpleIrrigationDiscussion": "-",
+  "SimpleIrrigationUpdateNote": "V1.0.0 - 04/22/19 - Initial release.",
   
   "SnapshotType": "App",
   "SnapshotParentVersion": "v1.0.0",
