--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -217,13 +217,13 @@
   
   "SnapshotType": "App",
   "SnapshotParentVersion": "v1.0.0",
-  "SnapshotChildVersion": "v1.1.3",
-  "SnapshotDriverVersion": "v1.0.8",
+  "SnapshotChildVersion": "v1.1.4",
+  "SnapshotDriverVersion": "v1.0.9",
   "SnapshotParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-parent.groovy",
   "SnapshotChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
   "SnapshotDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-driver.groovy",
   "SnapshotDiscussion": "https://community.hubitat.com/t/release-snapshot/12042",
-  "SnapshotUpdateNote": "V1.1.3 - 04/19/19 - Fixed a bug with Presence Sensors",
+  "SnapshotUpdateNote": "V1.1.4 - 04/30/19 - Added Water Sensor tracking",
   
   "WebPingerType": "App",
   "WebPingerParentVersion": "v1.0.2",
