--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -137,13 +137,13 @@
   
   "FollowMeType": "App",
   "FollowMeParentVersion": "v1.0.0",
-  "FollowMeChildVersion": "v1.1.2",
+  "FollowMeChildVersion": "v1.1.3",
   "FollowMeDriverVersion": "NA",
   "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
   "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
   "FollowMeDriverRawCode": "NA",
   "FollowMeDiscussion": "https://community.hubitat.com/t/release-follow-me/12139",
-  "FollowMeUpdateNote": "V1.1.2 - 04/15/19 - More Code cleanup",
+  "FollowMeUpdateNote": "V1.1.3 - 04/30/19 - Attempt to fix bug in checkTime",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
