--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -97,13 +97,13 @@
   
   "BIControlType": "App",
   "BIControlParentVersion": "v1.0.5",
-  "BIControlChildVersion": "v1.0.7",
+  "BIControlChildVersion": "v1.0.8",
   "BIControlDriverVersion": "NA",
   "BIControlParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
   "BIControlChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
   "BIControlDriverRawCode": "NA",
   "BIControlDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
-  "BIControlUpdateNote": "V1.0.7 - 04/15/19 - Code cleanup",
+  "BIControlUpdateNote": "V1.0.8 - 05/04/19 - Fixed 'pause'",
   
   "DeparturesType": "App",
   "DeparturesParentVersion": "v1.0.0",
