--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -207,13 +207,13 @@
   
   "SimpleIrrigationType": "App",
   "SimpleIrrigationParentVersion": "v1.0.0",
-  "SimpleIrrigationChildVersion": "v1.0.2",
+  "SimpleIrrigationChildVersion": "v1.0.3",
   "SimpleIrrigationDriverVersion": "NA",
   "SimpleIrrigationParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-parent.groovy",
   "SimpleIrrigationChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy",
   "SimpleIrrigationDriverRawCode": "NA",
   "SimpleIrrigationDiscussion": "-",
-  "SimpleIrrigationUpdateNote": "V1.0.2 - 05/07/19 - Fix one thing break another",
+  "SimpleIrrigationUpdateNote": " V1.0.3 - 05/13/19 - Added pushover notifications",
   
   "SnapshotType": "App",
   "SnapshotParentVersion": "v1.0.0",
