--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -177,13 +177,13 @@
   
   "NotifierPlusType": "App",
   "NotifierPlusParentVersion": "v1.0.1",
-  "NotifierPlusChildVersion": "v1.1.3",
+  "NotifierPlusChildVersion": "v1.1.5",
   "NotifierPlusDriverVersion": "NA",
   "NotifierPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-parent.groovy",
   "NotifierPlusChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
   "NotifierPlusDriverRawCode": "NA",
   "NotifierPlusDiscussion": "https://community.hubitat.com/t/release-notifier/10859",
-  "NotifierPlusUpdateNote": "V1.1.4 - 04/25/19 - Fixed a bug when selecting 'Jun'",
+  "NotifierPlusUpdateNote": "V1.1.5 - 05/17/19 - Time can now be spoken in 24 or 12 hour formats",
   
   "OneataTimeType": "App",
   "OneataTimeParentVersion": "v1.1.2",
