--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -246,7 +246,7 @@
   "WelcomeHomeUpdateNote": "V2.1.0 - 06/06/19 - Added more wording to Volume Control Options. Code cleanup.",
   
   "WhatDidISayType": "Driver",
-  "WhatDidISayDriver1Version": "v1.1.3",
+  "WhatDidISayDriver1Version": "v1.1.4",
   "WhatDidISayDriver2Version": "NA",
   "WhatDidISayDriver3Version": "NA",
   "WhatDidISayDriver4Version": "NA",
@@ -265,5 +265,5 @@
   "WhatDidISayDriver5Name": "NA",
   "WhatDidISayDriver6Name": "NA",
   "WhatDidISayDiscussion": "https://community.hubitat.com/t/release-what-did-i-say/9375",
-  "WhatDidISayUpdateNote": "V1.1.3 - 04/16/19 - Code cleanup, added importUrl",
+  "WhatDidISayUpdateNote": "V1.1.4 - 06/09/19 - Code changes to better handle priority messages",
 }
