--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -143,7 +143,7 @@
   "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
   "FollowMeDriverRawCode": "NA",
   "FollowMeDiscussion": "https://community.hubitat.com/t/release-follow-me/12139",
-  "FollowMeUpdateNote": "V1.1.7 - 06/09/19 - Code changes to better handle priority messages. Added sounds for google and Echo Speaks devices.",
+  "FollowMeUpdateNote": "V1.1.7 - 06/09/19 - Code changes to better handle priority messages. Added sounds for speech synth devices.",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
