--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -197,13 +197,13 @@
   
   "SendIP2IRType": "App",
   "SendIP2IRParentVersion": "v1.1.7",
-  "SendIP2IRChildVersion": "v1.1.9",
+  "SendIP2IRChildVersion": "v1.2.0",
   "SendIP2IRDriverVersion": "V1.0.3",
   "SendIP2IRParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Parent.groovy",
   "SendIP2IRChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy",
   "SendIP2IRDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Driver.groovy",
   "SendIP2IRDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
-  "SendIP2IRUpdateNote": "V1.1.9 - 04/16/19 - Fixed a bug, thank you @NickP!",
+  "SendIP2IRUpdateNote": "V1.2.0 - 07/14/19 - Minor code changes",
   
   "SimpleIrrigationType": "App",
   "SimpleIrrigationParentVersion": "v1.0.0",
