--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -1,6 +1,7 @@
 {
   "GitHubAuthor": "BPTWorld",
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
+  "GitHubAppCount": "20",
   "App01": "Abacus Intense Counting",
   "App02": "Abacus Time Traveler",
   "App03": "App Watchdog",
