--- a/bptworldAppsToo.json
+++ b/bptworldAppsToo.json
@@ -3,26 +3,26 @@
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
   "GitHubAppCount": "2",
   
-  "App1Name": "Abacus Intense Counting",
-  "App1Type": "App",
-  "App1ParentVersion": "v1.0.7",
-  "App1ChildVersion": "v1.1.0",
-  "App1DriverVersion": "V1.0.2",
-  "App1ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
-  "App1ChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
-  "App1DriverRawCode": "https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy",
-  "App1Discussion": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
-  "App1UpdateNote": "V1.1.0 - 04/15/19 - Code cleanup",
+  "AppName1": "Abacus Intense Counting",
+  "AppType1": "App",
+  "AppParentVersion1": "v1.0.7",
+  "AppChildVersion1": "v1.1.0",
+  "AppDriverVersion1": "V1.0.2",
+  "AppParentRawCode1": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
+  "AppChildRawCode1": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
+  "AppDriverRawCode1": "https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy",
+  "AppDiscussion1": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
+  "AppUpdateNote1": "V1.1.0 - 04/15/19 - Code cleanup",
   
-  "App2Name": "Abacus Time Traveler",
-  "App2Type": "App",
-  "App2ParentVersion": "v1.0.4",
-  "App2ChildVersion": "v1.0.5",
-  "App2DriverVersion": "NA",
-  "App2ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
-  "App2ChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
-  "App2DriverRawCode": "NA",
-  "App2Discussion": "https://community.hubitat.com/t/release-abacus-time-traveler/8091",
-  "App2UpdateNote": "V1.0.5 - 03/22/19 - Maintenance release to prepare for V2.0.0. You will need this version to save all of your stats!",
+  "AppName2": "Abacus Time Traveler",
+  "AppType2": "App",
+  "AppParentVersion2": "v1.0.4",
+  "AppChildVersion2": "v1.0.5",
+  "AppDriverVersion2": "NA",
+  "AppParentRawCode2": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
+  "AppChildRawCode2": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
+  "AppDriverRawCode2": "NA",
+  "AppDiscussion2": "https://community.hubitat.com/t/release-abacus-time-traveler/8091",
+  "AppUpdateNote2": "V1.0.5 - 03/22/19 - Maintenance release to prepare for V2.0.0. You will need this version to save all of your stats!",
 
 }
