--- a/bptworldAppsToo.json
+++ b/bptworldAppsToo.json
@@ -3,16 +3,16 @@
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
   "GitHubAppCount": "2",
   
-  "AppName1": "Abacus Intense Counting",
-  "AppType1": "App",
-  "AppParentVersion1": "v1.0.7",
-  "AppChildVersion1": "v1.1.0",
-  "AppDriverVersion1": "V1.0.2",
-  "AppParentRawCode1": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
-  "AppChildRawCode1": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
-  "AppDriverRawCode1": "https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy",
-  "AppDiscussion1": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
-  "AppUpdateNote1": "V1.1.0 - 04/15/19 - Code cleanup",
+  "AbacusIntenseCountingName": "Abacus Intense Counting",
+  "AbacusIntenseCountingType": "App",
+  "AbacusIntenseCountingParentVersion": "v1.0.7",
+  "AbacusIntenseCountingChildVersion": "v1.1.0",
+  "AbacusIntenseCountingDriverVersion": "V1.0.2",
+  "AbacusIntenseCountingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
+  "AbacusIntenseCountingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
+  "AbacusIntenseCountingDriverRawCode": "https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy",
+  "AbacusIntenseCountingDiscussion": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
+  "AbacusIntenseCountingUpdateNote": "V1.1.0 - 04/15/19 - Code cleanup",
   
   "AppName2": "Abacus Time Traveler",
   "AppType2": "App",
