--- a/bptworldAppsToo.json
+++ b/bptworldAppsToo.json
@@ -3,16 +3,15 @@
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
   "GitHubAppCount": "2",
   
-  "AbacusIntenseCountingName": "Abacus Intense Counting",
-  "AbacusIntenseCountingType": "App",
-  "AbacusIntenseCountingParentVersion": "v1.0.7",
-  "AbacusIntenseCountingChildVersion": "v1.1.0",
-  "AbacusIntenseCountingDriverVersion": "V1.0.2",
-  "AbacusIntenseCountingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
-  "AbacusIntenseCountingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
-  "AbacusIntenseCountingDriverRawCode": "https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy",
-  "AbacusIntenseCountingDiscussion": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
-  "AbacusIntenseCountingUpdateNote": "V1.1.0 - 04/15/19 - Code cleanup",
+  "AppWatchdogType": "App",
+  "AppWatchdogParentVersion": "v1.0.0",
+  "AppWatchdogChildVersion": "v1.1.2",
+  "AppWatchdogDriverVersion": "v1.0.2",
+  "AppWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
+  "AppWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
+  "AppWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-driver.groovy",
+  "AppWatchdogDiscussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
+  "AppWatchdogUpdateNote": "V1.1.2 - 04/15/19 - Code cleanup",
   
   "AppName2": "Abacus Time Traveler",
   "AppType2": "App",
