--- a/bptworldAppsToo.json
+++ b/bptworldAppsToo.json
@@ -3,15 +3,15 @@
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
   "GitHubAppCount": "2",
   
-  "AppWatchdogType": "App",
-  "AppWatchdogParentVersion": "v1.0.0",
-  "AppWatchdogChildVersion": "v1.1.2",
-  "AppWatchdogDriverVersion": "v1.0.2",
-  "AppWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
-  "AppWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
-  "AppWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-driver.groovy",
-  "AppWatchdogDiscussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
-  "AppWatchdogUpdateNote": "V1.1.2 - 04/15/19 - Code cleanup",
+  "AppWatchdogTooType": "App",
+  "AppWatchdogTooParentVersion": "v1.0.0",
+  "AppWatchdogTooChildVersion": "v1.1.2",
+  "AppWatchdogTooDriverVersion": "v1.0.2",
+  "AppWatchdogTooParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
+  "AppWatchdogTooChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
+  "AppWatchdogTooDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-driver.groovy",
+  "AppWatchdogTooDiscussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
+  "AppWatchdogTooUpdateNote": "V1.1.2 - 04/15/19 - Code cleanup",
   
   "AppName2": "Abacus Time Traveler",
   "AppType2": "App",
